Add get animedetail by id, structuring schemas
