# src/controllers/animedetail/animedetail.schema.ts
@@ -1,0 +1,4 @@
+import { UserAnime } from "./../animelist/animelist.schema";
+
+export type AnimeDetail = UserAnime;
+export type AnimeDetailList = AnimeDetail[];
