# tsoa/swagger.json
@@ -182,6 +182,15 @@
 				},
 				"type": "object"
 			},
+			"AnimeDetail": {
+				"$ref": "#/components/schemas/UserAnime"
+			},
+			"AnimeDetailList": {
+				"items": {
+					"$ref": "#/components/schemas/AnimeDetail"
+				},
+				"type": "array"
+			},
 			"UserSchema": {
 				"properties": {
 					"uid": {
@@ -380,6 +389,34 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/animedetail/{animeId}": {
+			"get": {
+				"operationId": "GetOneDetail",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/AnimeDetailList"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "animeId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/user/animelist": {
